# ann-2026

./: .env  .gitignore  Cargo.toml  lightning_run.sh  lightning_setup.sh  requirements.txt
backtest/: backtest.py
data/processed/: X_test.npy  X_val.npy  feature_cols.json  processed_coins.json  y_test.npy  y_train.npy  y_val.npy
data/raw/: symbols.json  top_coins.csv
data/raw/1000RATSUSDT/: funding.csv  klines.csv
data/raw/4USDT/: funding.csv  klines.csv
data/raw/AAVEUSDT/: funding.csv  klines.csv
data/raw/ADAUSDT/: funding.csv  klines.csv
data/raw/AIAUSDT/: funding.csv  klines.csv
data/raw/ANKRUSDT/: funding.csv  klines.csv
data/raw/APTUSDT/: funding.csv  klines.csv
data/raw/ARCUSDT/: funding.csv  klines.csv
data/raw/ARIAUSDT/: funding.csv  klines.csv
data/raw/ATOMUSDT/: funding.csv  klines.csv
data/raw/AXSUSDT/: funding.csv  klines.csv
data/raw/B3USDT/: funding.csv  klines.csv
data/raw/BANANAS31USDT/: funding.csv  klines.csv
data/raw/BARDUSDT/: funding.csv  klines.csv
data/raw/BASUSDT/: funding.csv  klines.csv
data/raw/BEATUSDT/: funding.csv  klines.csv
data/raw/BERAUSDT/: funding.csv  klines.csv
data/raw/BIRBUSDT/: funding.csv  klines.csv
data/raw/BLUAIUSDT/: funding.csv  klines.csv
data/raw/BRUSDT/: funding.csv  klines.csv
data/raw/BSBUSDT/: funding.csv  klines.csv
frontend/: server.py
frontend/src/: app.js  index.html  style.css
models/: scaler.pkl
pipeline/: features.py  fetch_data.py  model.py  predict.py  train.py
scripts/: run_pipeline.sh  scheduler.py
src/: main.rs  ws_stream.rs
(+182 files in other folders)
