[package]
name = "btc-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

[[bin]]
name = "btc-fetcher"
path = "src/main.rs"

[[bin]]
name = "ws-stream"
path = "src/ws_stream.rs"
